--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        viewBinding = true
     }
 }
 
@@ -55,4 +55,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
