--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    implementation "com.github.bumptech.glide:glide:4.13.0"
 }
